Added index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,14 +9,34 @@
     File Name: index.html
     -->
 <head>
-	
+
 	<title>Venued</title>
-	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width">
-
+	<link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
+<div>
+	<div class="topOfPage">
 
+		<div class="enterLocation">
+			<input class="enterLocation" placeholder="Enter Your Location">
+		</div>
+
+		<div class="topTitle">
+			<p class="header">Venues Near You</p>
+		</div>
+
+	</div>
+
+
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
