--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -25,5 +25,77 @@ body {
     color: white;
     font-family: "Lantinghei SC", sans-serif;
     font-size: 48px;
-    margin-top: -50px;
+    margin-top: -20px;
 }
+
+*::before, *::after {
+    box-sizing: border-box;
+
+}
+
+.carousel {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+
+.carousel > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+}
+
+.slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.slide > img {
+    display: block;
+    width: 60%;
+    height: 50%;
+/*object-fit maintains the aspect ratio*/
+    object-fit: cover;
+    object-position: center;
+}
+
+
+.slide[data-active] {
+    opacity: 1;
+}
+
+.carousel-button {
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 4rem;
+    top: 50%;
+    transform: translateY(-300%);
+    color: rgba(255, 255, 255, .5);
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgba(0,0,0,.01);
+}
+
+.carousel-button:hover,
+.carousel-button:focus {
+    color: white;
+    background-color: rgba(0,0,0,.2);
+}
+
+.carousel-button:focus {
+    outline: 1px solid black;
+}
+
+.carousel-button.prev {
+    left: 7rem;
+}
+
+.carousel-button.next {
+    right: 7rem;}
