--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width">
 	<link rel="stylesheet" href="../static/css/index.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+	<script src="../static/js/index.js" defer></script>
 </head>
 <body>
 <div>
@@ -25,6 +29,27 @@
 
 		<div class="topTitle">
 			<p class="header">Venues Near You</p>
+		</div>
+
+		<div>
+			<section aria-label="Newest Photos">
+				<div class="carousel" data-carousel>
+					<button class="carousel-button prev" data-carousel-button>&#8672;</button>
+					<button class="carousel-button next" data-carousel-button>&#8674;</button>
+
+					<ul data-slides>
+						<li class="slide" data-active>
+							<img src="https://source.unsplash.com/78A265wPiO4" alt="Nature Image #1">
+						</li>
+						<li class="slide">
+							<img src="https://source.unsplash.com/eOpewngf68w" alt="Nature Image #2">
+						</li>
+						<li class="slide">
+							<img src="https://source.unsplash.com/ndN00KmbJ1c" alt="Nature Image #3">
+						</li>
+					</ul>
+				</div>
+			</section>
 		</div>
 
 	</div>
