Added transitions to index

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/static/imgs/BackgroundImage.jpg");
+    background-image: url("/imgs/BackgroundImage.jpg");
     background-size: cover;
     height: 100%;
 }
@@ -25,7 +25,7 @@ body {
     color: white;
     font-family: "Lantinghei SC", sans-serif;
     font-size: 48px;
-    margin-top: -20px;
+    margin-top: 10px;
 }
 
 *::before, *::after {
@@ -52,6 +52,8 @@ body {
     opacity: 0;
     display: flex;
     justify-content: center;
+    transition: 200ms opacity ease-in-out;
+    transition-delay: 200ms;
 }
 
 .slide > img {
@@ -66,6 +68,7 @@ body {
 
 .slide[data-active] {
     opacity: 1;
+    transition-delay: 0ms;
 }
 
 .carousel-button {
