Added latest user questions section

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,14 +53,31 @@
 			</section>
 		</div>
 
+		<div class="questionsSection">
+
+			<div class="midTitle">
+				<p>Latest User Questions</p>
+			</div>
+
+			<div class="latestQuestions">
+
+				<div class="individualQuestion row">
+
+					<div class="col-2">Paper Tiger <br> San Antonio TX</div>
+
+						<div class="col-8">
+							<span class="username">{username} asked:</span>
+							<span class="question">{question}</span></div>
+
+					<button class="answerButton col-2">Answer Me!</button>
+				</div>
+
+
+
+			</div>
+		</div>
+
 	</div>
-
-
-
-
-
-
-
 
 
 </div>
