--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,10 +1,14 @@
+/*html {*/
+/*    scroll-behavior: smooth;*/
+/*}*/
+
 body {
     background-image: url("/imgs/BackgroundImage.jpg");
     background-size: cover;
     height: 100%;
 }
 
-.enterLocation, .topTitle {
+.enterLocation, .topTitle, .midTitle, .latestQuestions {
     display: flex;
     justify-content: center;
 }
@@ -21,7 +25,7 @@ body {
 
 }
 
-.topTitle {
+.topTitle, .midTitle {
     color: white;
     font-family: "Lantinghei SC", sans-serif;
     font-size: 48px;
@@ -101,4 +105,31 @@ body {
 }
 
 .carousel-button.next {
-    right: 7rem;}
+    right: 7rem;
+}
+
+.midTitle {
+    margin-top: -480px;
+}
+
+.individualQuestion {
+    border: 1px solid white;
+    color: white;
+    width: 1500px;
+    display: block;
+    border-radius: 50px;
+    padding: 20px;
+    font-family: "Lantinghei SC", sans-serif;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.answerButton {
+    border-radius: 50px;
+    mix-blend-mode: overlay;
+    border: none;
+}
+
+.username {
+    font-weight: bold;
+}
+
