--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,7 +3,7 @@
 /*}*/
 
 body {
-    background-image: url("/imgs/BackgroundImage.jpg");
+    background-image: url("../imgs/BackgroundImage.jpg");
     background-size: cover;
     height: 100%;
 }
