--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -11,18 +11,35 @@
 	<head>
 		
 		<title>Venued - login page</title>
-		
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1, width=device-width">
-
+		<!-- CSS only -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+		<link rel="stylesheet" href="/css/form.css">
 	</head>
 	<body>
-		<form action="" method="post">
-			<input type="text">
-			<input type="text">
-			<button>Login</button>
-			<div class="g-signin2" data-onsuccess="onSignIn"></div>
-		</form>
+	<main>
+		<h1 class="text-center" id="form-title">Login</h1>
+		<div class="form-wrapper">
+			<form th:action="@{/}" th:method="post" class="w-100 mx-auto">
+				<div class="w-100 mb-4">
+					<input id="username" name="username" type="text" class="form-control w-100 shadow-none focus-field" autocomplete="off" placeholder="Username">
+				</div>
+				<div class="w-100 mt-4">
+					<input id="password" name="password" type="password" class="form-control w-100 shadow-none" placeholder="Password">
+				</div>
+				<div class="w-25 mt-4 mx-auto">
+					<input type="submit" value="Login" class="form-control w-100 text-black shadow-none bg-white" id="btn">
+				</div>
+				<div>Need an account?<a th:href="@{/users/register}">&nbsp;Sign Up</a></div>
+			</form>
+		</div>
+	</main>
+
+	<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 	</body>
 </html>
+
+
