--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -8,64 +8,31 @@
     <link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
-<!--Navbar-->
-<nav class="navbar navbar-light amber lighten-4 mb-4">
+    <!--Navbar-->
+    <nav>
 
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Navbar</a>
-
-    <!-- Collapse button -->
-    <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
-            aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
-        <div class="animated-icon1">
-            <span></span>
-            <span></span>
-            <span></span>
+    </nav>
+    <main>
+        <h1 class="text-center" id="form-title">Sign Up</h1>
+        <div class="form-wrapper">
+            <form th:action="@{/}" th:method="post" class="w-100 mx-auto">
+                <div class="w-100 mb-4">
+                    <input id="username" name="username" type="text" class="form-control w-100 shadow-none focus-field" autocomplete="off" placeholder="Username">
+                </div>
+                <div class="w-100 mb-4">
+                    <input id="email" name="email" type="email" class="form-control w-100 shadow-none focus-field" autocomplete="off" placeholder="Email">
+                </div>
+                <div class="w-100 mt-4">
+                    <input id="password" name="password" type="password" class="form-control w-100 shadow-none" placeholder="Password">
+                </div>
+                <div class="w-25 mt-4 mx-auto">
+                    <input type="submit" value="Sign Up" class="form-control w-100 text-black shadow-none bg-white" id="btn">
+                </div>
+                <div>Already have an account?<a th:href="@{/users/login}">&nbsp;Login</a></div>
+            </form>
         </div>
-    </button>
+    </main>
 
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent20">
-
-        <!-- Links -->
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-        </ul>
-        <!-- Links -->
-
-    </div>
-    <!-- Collapsible content -->
-
-</nav>
-<!--/.Navbar-->
-
-
-    <form action="#" method="#" class="border">
-        <div class="container w-50 border">
-            <h2 class="">Sign Up</h2>
-            <div class="mb-4">
-                <input type="text" name="username" class="form-control" id="exampleInputEmail1" placeholder="username">
-            </div>
-            <div class="mb-4">
-                <input type="email" name="email" class="form-control" id="email" placeholder="email">
-            </div>
-            <div class="mb-4">
-                <input type="password" name="password" class="form-control" id="password" placeholder="password">
-            </div>
-            <div class="mt-4">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-            <p>Already have an account?<span>Login</span></p>
-        </div>
-    </form>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/js/form.js"></script>
