--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -10,16 +10,19 @@
     <script src="/js/index.js" defer></script>
 </head>
 <body>
-<nav th:fragment="mynav" class="topNav row">
-    <a class="active col mx-auto" href="#home"><img src="/imgs/venuedImage.png" class="logo"></a>
-    <div class="login-container col">
-        <form>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-            </svg>
-            <button type="submit" class="btn signup-btn">Sign Up</button>
-            <button type="submit" class="btn login-btn">Login</button>
-        </form>
+<nav th:fragment="mynav" class="topNav">
+    <a class="venued" href="#home"><img src="/imgs/venuedImage.png" class="logo"></a>
+    <div class="login-container container h-100">
+                <div class="">
+                    <div class="searchbar">
+                        <input class="search_input" type="text" name="" placeholder="Search...">
+                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                    </div>
+                </div>
+            <form>
+                <button type="submit" class="btn signup-btn">Sign Up</button>
+                <button type="submit" class="btn login-btn">Login</button>
+            </form>
     </div>
 </nav>
 
