--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 					<button class="carousel-button prev" data-carousel-button>&#8672;</button>
 					<button class="carousel-button next" data-carousel-button>&#8674;</button>
 
-					<ul data-slides>
+					<ul class="slides" data-slides>
 						<li class="slide" data-active>
 							<img src="https://source.unsplash.com/78A265wPiO4" alt="Nature Image #1">
 						</li>
