--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/Navbar.css}">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -12,17 +13,15 @@
 <body>
 <nav th:fragment="mynav" class="topNav">
     <a class="venued" href="#home"><img src="/imgs/venuedImage.png" class="logo"></a>
-    <div class="login-container container h-100">
-                <div class="">
-                    <div class="searchbar">
-                        <input class="search_input" type="text" name="" placeholder="Search...">
-                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
-                    </div>
-                </div>
-            <form>
-                <button type="submit" class="btn signup-btn">Sign Up</button>
-                <button type="submit" class="btn login-btn">Login</button>
-            </form>
+    <div class="items-holder d-flex gap-3">
+        <div class="searchbar">
+            <input class="search_input" type="text" name="" placeholder="Search...">
+            <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+        </div>
+        <form>
+            <button type="submit" class="btn signup-btn">Sign Up</button>
+            <button type="submit" class="btn login-btn">Login</button>
+        </form>
     </div>
 </nav>
 
