--- a/src/main/resources/static/css/Navbar.css
+++ b/src/main/resources/static/css/Navbar.css
@@ -4,7 +4,8 @@
 .topNav {
     display: flex;
     justify-content: space-between;
-    height: 100px;
+    height: 80px;
+    background-color: rgba(0,0,0,0.2);
 }
 .logo {
     position: relative;
@@ -13,7 +14,8 @@
 
 .searchbar {
     margin-bottom: auto;
-    margin-top: auto;
+    margin-top: 25px;
+    margin-right: -25px;
     height: 60px;
     border-radius: 30px;
     padding: 10px;
@@ -30,20 +32,16 @@
     transition-property: left;
 }
 .searchbar:hover > .search_input {
+    background: white;
     padding: 0 10px;
     width: 320px;
     transition: width 0.4s linear;
 }
-/*.searchbar:hover > .search_icon {*/
-/*    background: white;*/
-/*}*/
+
 .search_icon {
     height: 40px;
     width: 40px;
     float: right;
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
     border-radius: 50%;
     color: white;
     text-decoration: none;
@@ -54,7 +52,7 @@
 
 
 /* Navbar links */
-.topNav a {
+.venued {
     float: left;
     display: block;
     color: black;
@@ -67,38 +65,23 @@
 .login-btn{
     position: relative;
     top: 30px;
-    background-color: orangered;
+    background: orangered linear-gradient(to right, orangered, orange);
+    font-family: "Lantinghei SC", sans-serif;
     padding: 1px 30px;
 }
 .signup-btn{
     position: relative;
     top: 30px;
-    background-color: orange;
+    background-color: black;
+    border-color: orangered;
+    color: orange;
+    font-family: "Lantinghei SC", sans-serif;
     padding: 1px 30px;
 }
 
 .fas{
     color: white;
 }
-
-/* Navbar links on mouse-over */
-.topNav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-/* Style the input container */
-/*.topNav .login-container {*/
-/*    float: right;*/
-/*}*/
-
-/*.login-container {*/
-/*    display: flex;*/
-/*    justify-content: space-between;*/
-/*    position: relative;*/
-/*    top: 20px;*/
-/*}*/
 
 /* Style the button inside the input container */
 .topNav .login-container button {
