Redoing index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,65 +21,10 @@
 	<script src="/js/index.js" defer></script>
 </head>
 <body>
-<div>
-	<div class="topOfPage">
-
-		<div class="enterLocation">
-			<input class="enterLocation" placeholder="Enter Your Location">
-		</div>
-
-		<div class="topTitle">
-			<p class="header">Venues Near You</p>
-		</div>
-
-		<div>
-			<section aria-label="Newest Photos">
-				<div class="carousel" data-carousel>
-					<button class="carousel-button prev" data-carousel-button>&#8672;</button>
-					<button class="carousel-button next" data-carousel-button>&#8674;</button>
-
-					<ul data-slides>
-						<li class="slide" data-active>
-							<img src="https://source.unsplash.com/78A265wPiO4" alt="Nature Image #1">
-						</li>
-						<li class="slide">
-							<img src="https://source.unsplash.com/eOpewngf68w" alt="Nature Image #2">
-						</li>
-						<li class="slide">
-							<img src="https://source.unsplash.com/ndN00KmbJ1c" alt="Nature Image #3">
-						</li>
-					</ul>
-				</div>
-			</section>
-		</div>
-
-		<div class="questionsSection">
-
-			<div class="midTitle">
-				<p>Latest User Questions</p>
-			</div>
-
-			<div class="latestQuestions">
-
-				<div class="individualQuestion row">
-
-					<div class="col-2">Paper Tiger <br> San Antonio TX</div>
-
-						<div class="col-8">
-							<span class="username">{username} asked:</span>
-							<span class="question">{question}</span></div>
-
-					<button class="answerButton col-2">Answer Me!</button>
-				</div>
-
-
-
-			</div>
-		</div>
-
-	</div>
-
-
-</div>
+	<section>
+		<p class="slogan">Don't Miss the Main Act.</p><br>
+		<p class="topDescription">Venued is a platform that provides tips and advice for finding the best venues, as
+			well as helping people plan their nights out.</p>
+	</section>
 </body>
 </html>
