venue page added

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -21,7 +21,7 @@ main {
     margin: 0 auto;
     width: 40%;
     max-width: 600px;
-    padding: 2.5rem;
+    padding: 2rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     border-radius: 10px;
 }
@@ -32,11 +32,13 @@ main {
 }
 a {
     color: #1e90ff;
+    text-decoration: none;
 }
 form div:last-of-type {
     margin-top: 2rem;
     text-align: center;
     color: #d3d3d3;
+    font-size: 1.2rem;
 }
 @media screen and (max-width: 700px) {
     .form-wrapper {
