--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -13,8 +13,8 @@
 
     </nav>
     <main>
-        <h1 class="text-center" id="form-title">Sign Up</h1>
         <div class="form-wrapper">
+        <h1 class="text-center mb-4" id="form-title">Sign Up</h1>
             <form th:action="@{/}" th:method="post" class="w-100 mx-auto">
                 <div class="w-100 mb-4">
                     <input id="username" name="username" type="text" class="form-control w-100 shadow-none focus-field" autocomplete="off" placeholder="Username">
