--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>Venued - login page</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="initial-scale=1, width=device-width">
-		<!-- CSS only -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/form.css">
+		<div th:replace="partials/venued_partials :: myheader('Login')"></div>
+		<link rel="stylesheet" th:href="@{/css/form.css}">
 	</head>
 	<body>
+	<nav th:replace="partials/venued_partials :: mynav"></nav>
 	<main>
 		<div class="form-wrapper">
 		<h1 class="text-center mb-4" id="form-title">Login</h1>
