--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/form.css">
+    <div th:replace="partials/venued_partials :: myheader('Login')"></div>
+    <link rel="stylesheet" th:href="@{/css/form.css}">
 </head>
 <body>
     <!--Navbar-->
-    <nav>
-
-    </nav>
+    <nav th:replace="partials/venued_partials :: mynav"></nav>
     <main>
         <div class="form-wrapper">
         <h1 class="text-center mb-4" id="form-title">Sign Up</h1>
@@ -32,7 +27,6 @@
             </form>
         </div>
     </main>
-
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/js/form.js"></script>
