--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,8 +1,20 @@
-.footer{
+.footer {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 200px;
     background-color: rgba(255,255,255,0.5);
+}
+
+.socials{
+    display: flex;
+    position: relative;
+    left: 25px;
+    gap: 10px;
+    max-width: 200px!important;
+}
+.venuedblack{
+    display: flex!important;
+    max-width: 400px!important;
 }
