--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -11,8 +11,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <script src="/js/index.js" defer></script>
     </div>
-
-</head>
 <body>
 <nav th:fragment="mynav" class="topNav">
     <a class="venued" href="#home"><img src="/imgs/venuedImage.png" class="logo"></a>
@@ -27,6 +25,10 @@
         </form>
     </div>
 </nav>
-
+<footer style="border: 1px solid black" th:fragment="footer" class="footer">
+    <div class="">
+    <a class="venuedblack" href="#home"><img src="/imgs/blacklogo.png" class="logo"></a>
+    </div>
+</footer>
 </body>
 </html>
