--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -54,13 +54,13 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form>
+                                        <form th:action="@{}" th:method="post" th:object="${Tips}">
                                             <div class="mb-3">
-                                                <textarea class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3" cols="30" placeholder="Add a tip here..."></textarea>
+                                                <textarea class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3" cols="30" placeholder="Add a tip here..." th:field="*{tipContent}"></textarea>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="Submit" class="btn btn-primary">Save</button>
+                                                <button type="Submit" class="btn btn-primary">Submit</button>
                                             </div>
                                         </form>
                                     </div>
@@ -134,9 +134,9 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <form>
+                                        <form th:action="@{}" th:method="post" th:object="${questions}">
                                             <div class="mb-3">
-                                                <textarea class="form-control shadow-none" id="question" rows="3" cols="30" placeholder="question goes here..."></textarea>
+                                                <textarea class="form-control shadow-none" id="question" rows="3" cols="30" placeholder="question goes here..." th:field="*{question}"></textarea>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
