--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 <div class="page-wrapper">
-	
     <nav th:replace="~{partials/venued_partials.html :: mynav}"></nav>
     <div class="container hero">
         <div class="row">
@@ -15,10 +14,9 @@
                 <p class="hero-p">About Us</p>
             </div>
         </div>
-	    
         <div class="row circles">
-	        
             <div class="col-sm">
+
                 <div class="img_holder">
                     <img src="/imgs/deshawn.jpg" class="dot deshawn" alt="image of deshawn">
                 </div>
@@ -39,9 +37,14 @@
                             <p>
                                 Deshawn is a full stack developer with a passion for creating
                                 applications that are both functional and beautiful. He has a
-                                background in graphic design and has worked with many
-                                technologies. He is currently working on his Bachelors in Computer
-                                Science at the University of Texas at Austin.
+                                background in graphic design and has worked with a variety of
+                                clients to create websites and applications that are both
+                                functional and beautiful. He has a background in graphic design
+                                and has worked with a variety of clients to create websites and
+                                applications that are both functional and beautiful.<br>
+                                <a href="https://www.linkedin.com/in/marquis-w/" target="_blank">
+                                    <img src="/imgs/linkedin.svg" alt="linkedin" class="linkedin">
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -72,11 +75,15 @@
                                 background in graphic design and has worked with many
                                 technologies. He is currently working on his Bachelors in Computer
                                 Science at the University of Texas at Austin.
+                                <a href="https://www.linkedin.com/in/rodrigo-nmn-marquez/" target="_blank">
+                                    <img src="/imgs/linkedin.svg" alt="linkedin" class="linkedin">
+                                </a>
                             </p>
                         </div>
                     </div>
                 </dialog>
             </div>
+
             <div class="col-sm">
                 <div class="img_holder">
                     <img src="/imgs/tesfalem.jpg" class="dot tesfalem" alt="image of tesfalem">
@@ -101,11 +108,15 @@
                                 background in graphic design and has worked with many
                                 technologies. He is currently working on his Bachelors in Computer
                                 Science at the University of Texas at Austin.
+                                <a href="https://www.linkedin.com/in/tesfalem-tekie-50a098173/" target="_blank">
+                                    <img src="/imgs/linkedin.svg" alt="linkedin" class="linkedin">
+                                </a>
                             </p>
                         </div>
                     </div>
                 </dialog>
             </div>
+
             <div class="col-sm align-circle-bottom">
                 <div class="img_holder">
                     <img src="/imgs/frances.png" class="dot frances" alt="image of frances">
@@ -129,6 +140,9 @@
                                 background in graphic design and has worked with many
                                 technologies. He is currently working on his Bachelors in Computer
                                 Science at the University of Texas at Austin.
+                                <a href="https://www.linkedin.com/in/francesperez141/" target="_blank">
+                                    <img src="/imgs/linkedin.svg" alt="linkedin" class="linkedin">
+                                </a>
                             </p>
                         </div>
                     </div>
