--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -87,7 +87,7 @@
 			
 			<div class="rightSide">
 				<div class="subscribe">
-					<form class="form-group">
+					<form class="subscribe-form">
 						<label for="footer_email">Subscribe</label>
 						<input type="email" placeholder="Email Address" id="footer_email" class="email" size="40">
 						<button type="submit" class="btn subscribe_btn">Subscribe</button>
