venue page functionality on progress

--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -35,7 +35,7 @@
 			<script src="/js/carousel.js" defer></script>
 			
 			<!-- Custom JS Navbar -->
-			<script src="/js/navbar.js"></script>
+			<script src="/js/navbar.js" defer></script>
 			
 		</div>
 
