--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -53,10 +53,10 @@
                                         <h1 class="modal-title fs-5" id="exampleModalLabel1">Add a tip</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body">
-                                        <form>
+                                    <div class="modal-body" th:each="tip : ${tips}">
+                                        <form th:action="@{/tips}" th:method="post" th:object="${tip}">
                                             <div class="mb-3">
-                                                <textarea class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3" cols="30" placeholder="Add a tip here..."></textarea>
+                                                <textarea th:field="*{tipContent}" class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3" cols="30" placeholder="Add a tip here..."></textarea>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -133,14 +133,14 @@
                                         <h1 class="modal-title fs-5" id="exampleModalLabel2">Ask Questions</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body">
-                                        <form>
+                                    <div class="modal-body" th:each="question : ${questions}">
+                                        <form th:action="@{/questions}" th:method="post" th:object="${question}">
                                             <div class="mb-3">
-                                                <textarea class="form-control shadow-none" id="question" rows="3" cols="30" placeholder="question goes here..."></textarea>
+                                                <textarea th:field="*{question}" class="form-control shadow-none" id="question" rows="3" cols="30" placeholder="question goes here..."></textarea>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="Submit" class="btn btn-primary">Save</button>
+                                                <button type="Submit" class="btn btn-primary">Submit</button>
                                             </div>
                                         </form>
                                     </div>
