--- a/src/main/resources/static/css/venue_pages/venue.css
+++ b/src/main/resources/static/css/venue_pages/venue.css
@@ -125,7 +125,7 @@ h2, h3 {
     padding: 0.2rem 1.3rem;
     border-radius: 10px;
     background: linear-gradient(35deg, #e66465 10%, #9370db 90%);
-    border: 1px solid white;
+    border: none;
 }
 
 .list-tips,
@@ -257,3 +257,23 @@ small {
     }
 }
 
+/*--- modal style ----*/
+.modal-content {
+    background: rgba(166, 67, 98, 0.73) linear-gradient(to right, rgba(121, 47, 69, 0.87), rgba(72, 38, 147, 0.87));
+}
+.modal-header {
+    border-bottom: none;
+}
+.modal-title {
+    color: #fff;
+}
+form > div:first-child textarea {
+    background-color: transparent;
+}
+form > div:first-child textarea:focus {
+    background-color: transparent;
+    color: #fff;
+}
+.modal-footer {
+    border-top: none;
+}
